adding new framework projects

--- a/src/Euclid.Framework.Transport/Euclid.Framework.Transport.csproj
+++ b/src/Euclid.Framework.Transport/Euclid.Framework.Transport.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>9a0b519f-eebc-42b6-95d3-b4d3d5dfed98</ProjectGuid>
+    <ProjectGuid>{B2D19FB7-F317-4122-93B2-F13727CE490E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Euclid.Framework.Transport</RootNamespace>
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
