initial pass of core framework interface definitions with draft-quality in-line documentation

--- a/src/Euclid.Agent/Euclid.Agent.csproj
+++ b/src/Euclid.Agent/Euclid.Agent.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>e49adaa1-15fd-416c-b1d4-ba2e80435889</ProjectGuid>
+    <ProjectGuid>{4C4F2541-140C-47D6-B018-D2024F8CF4F0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Euclid.Agent</RootNamespace>
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
