--- a/src/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
+++ b/src/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>d7253886-f445-46a2-9a5a-d448a4c5da81</ProjectGuid>
+    <ProjectGuid>{F0842E3B-1F25-4D42-B25D-758B8FCBDCC3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Euclid.Composites.Mvc</RootNamespace>
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
