--- a/src/Euclid.Framework/Euclid.Framework.csproj
+++ b/src/Euclid.Framework/Euclid.Framework.csproj
@@ -41,11 +41,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cqrs\ICommand.cs" />
+    <Compile Include="Cqrs\ICommandProcessor.cs" />
     <Compile Include="Cqrs\IQuery.cs" />
     <Compile Include="EventSourcing\IAggregateDenormalizer.cs" />
+    <Compile Include="IAggregateRoot.cs" />
     <Compile Include="EventSourcing\ICommandToEventMapper.cs" />
     <Compile Include="EventSourcing\IEvent.cs" />
     <Compile Include="EventSourcing\IEventSourcedAggregate.cs" />
+    <Compile Include="IReadModel.cs" />
     <Compile Include="HostingFabric\FabricControllerState.cs" />
     <Compile Include="HostingFabric\FabricServiceState.cs" />
     <Compile Include="HostingFabric\IFabricController.cs" />
