--- a/src/Euclid.Framework/Euclid.Framework.csproj
+++ b/src/Euclid.Framework/Euclid.Framework.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Cqrs\ICommandProcessor.cs" />
     <Compile Include="Cqrs\IQuery.cs" />
     <Compile Include="EventSourcing\IAggregateDenormalizer.cs" />
+    <Compile Include="HostingFabric\IFabricRuntime.cs" />
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="EventSourcing\ICommandToEventMapper.cs" />
     <Compile Include="EventSourcing\IEvent.cs" />
