--- a/Euclid.Framework.EventSourcing/Euclid.Framework.EventSourcing.csproj
+++ b/Euclid.Framework.EventSourcing/Euclid.Framework.EventSourcing.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4192538D-5E42-4841-8C8F-6A2072808D41}</ProjectGuid>
+    <ProjectGuid>06341930-00a5-4140-b5b4-46f3b811b46c</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Framework.HostingFabric</RootNamespace>
-    <AssemblyName>Euclid.Framework.HostingFabric</AssemblyName>
+    <RootNamespace>Euclid.Framework.EventSourcing</RootNamespace>
+    <AssemblyName>Euclid.Framework.EventSourcing</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
