--- a/src/Euclid.Framework.Common.Registry/Euclid.Framework.Common.Registry.csproj
+++ b/src/Euclid.Framework.Common.Registry/Euclid.Framework.Common.Registry.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4192538D-5E42-4841-8C8F-6A2072808D41}</ProjectGuid>
+    <ProjectGuid>{F0C8929B-718E-4360-85FF-520398DEA764}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Framework.HostingFabric</RootNamespace>
-    <AssemblyName>Euclid.Framework.HostingFabric</AssemblyName>
+    <RootNamespace>Euclid.Framework.Common.Registry</RootNamespace>
+    <AssemblyName>Euclid.Framework.Common.Registry</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
