--- a/src/Euclid.Framework.Common.Transport/Euclid.Framework.Common.Transport.csproj
+++ b/src/Euclid.Framework.Common.Transport/Euclid.Framework.Common.Transport.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{B2D19FB7-F317-4122-93B2-F13727CE490E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Framework.Transport</RootNamespace>
-    <AssemblyName>Euclid.Framework.Transport</AssemblyName>
+    <RootNamespace>Euclid.Framework.Common.Transport</RootNamespace>
+    <AssemblyName>Euclid.Framework.Common.Transport</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
