corrected location of project

--- a/src/Euclid.Framework.EventSourcing/Euclid.Framework.EventSourcing.csproj
+++ b/src/Euclid.Framework.EventSourcing/Euclid.Framework.EventSourcing.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>06341930-00a5-4140-b5b4-46f3b811b46c</ProjectGuid>
+    <ProjectGuid>{35457F8B-839A-42B5-9CAC-CDDEFC7B7515}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Euclid.Framework.EventSourcing</RootNamespace>
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
