--- a/src/Euclid.Framework.Cqrs/Euclid.Framework.Cqrs.csproj
+++ b/src/Euclid.Framework.Cqrs/Euclid.Framework.Cqrs.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>63c688bb-40d4-46e0-96a2-28c325ab2a45</ProjectGuid>
+    <ProjectGuid>{58D2349E-9C39-485E-861E-E337ACF186B6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Euclid.Framework.Cqrs</RootNamespace>
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
