--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\Euclid.Console.Web\packages.config" />
   <repository path="..\src\Euclid.Console.Web\packages.config" />
+  <repository path="..\tests\Euclid.Framework.HostingFabric.UnitTests\packages.config" />
+  <repository path="..\tests\Euclid.Framework.HostingFabric.IntegrationTests\packages.config" />
 </repositories>
