reconsidered test structure

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,6 @@
   <repository path="..\src\Euclid.Console.Web\packages.config" />
   <repository path="..\tests\Euclid.Framework.HostingFabric.UnitTests\packages.config" />
   <repository path="..\tests\Euclid.Framework.HostingFabric.IntegrationTests\packages.config" />
+  <repository path="..\tests\Euclid.Framework.IntegrationTests\packages.config" />
+  <repository path="..\tests\Euclid.Framework.UnitTests\packages.config" />
 </repositories>
