--- a/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
+++ b/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultFabricController.cs" />
+    <Compile Include="ThreadedFabricRuntime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
