--- a/src/Euclid.Framework/Euclid.Framework.csproj
+++ b/src/Euclid.Framework/Euclid.Framework.csproj
@@ -44,16 +44,16 @@
     <Compile Include="Cqrs\ICommandProcessor.cs" />
     <Compile Include="Cqrs\IQuery.cs" />
     <Compile Include="EventSourcing\IAggregateDenormalizer.cs" />
-    <Compile Include="HostingFabric\IFabricRuntime.cs" />
+    <Compile Include="HostingFabric\IServiceHost.cs" />
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="EventSourcing\ICommandToEventMapper.cs" />
     <Compile Include="EventSourcing\IEvent.cs" />
     <Compile Include="EventSourcing\IEventSourcedAggregate.cs" />
     <Compile Include="IReadModel.cs" />
     <Compile Include="HostingFabric\FabricControllerState.cs" />
-    <Compile Include="HostingFabric\FabricServiceState.cs" />
+    <Compile Include="HostingFabric\HostedServiceState.cs" />
     <Compile Include="HostingFabric\IFabricController.cs" />
-    <Compile Include="HostingFabric\IFabricService.cs" />
+    <Compile Include="HostingFabric\IHostedService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
