added testing fakes project; ongoing work on hosting fabric naming and structure

--- a/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
+++ b/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultFabricController.cs" />
+    <Compile Include="DefaultHostedService.cs" />
     <Compile Include="ThreadedServiceHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
