--- a/src/Euclid.Framework/Euclid.Framework.csproj
+++ b/src/Euclid.Framework/Euclid.Framework.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Cqrs\IQuery.cs" />
     <Compile Include="EventSourcing\IAggregateDenormalizer.cs" />
     <Compile Include="HostingFabric\IServiceHost.cs" />
+    <Compile Include="HostingFabric\HostedServiceNotFoundException.cs" />
     <Compile Include="HostingFabric\ServiceHostState.cs" />
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="EventSourcing\ICommandToEventMapper.cs" />
