straw man implementation of TaskingServiceHost

--- a/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
+++ b/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="DefaultFabricController.cs" />
     <Compile Include="DefaultHostedService.cs" />
-    <Compile Include="ThreadedServiceHost.cs" />
+    <Compile Include="TaskingServiceHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
