--- a/src/Euclid.Framework.Common.Fabric/Euclid.Framework.Common.Fabric.csproj
+++ b/src/Euclid.Framework.Common.Fabric/Euclid.Framework.Common.Fabric.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4192538D-5E42-4841-8C8F-6A2072808D41}</ProjectGuid>
+    <ProjectGuid>{5DA8EB8A-1E6D-4286-88BD-6C58421049F0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Framework.HostingFabric</RootNamespace>
-    <AssemblyName>Euclid.Framework.HostingFabric</AssemblyName>
+    <RootNamespace>Euclid.Framework.Common.Fabric</RootNamespace>
+    <AssemblyName>Euclid.Framework.Common.Fabric</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,11 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultFabricController.cs" />
-    <Compile Include="DefaultHostedService.cs" />
-    <Compile Include="ServiceHosts\MultitaskingServiceHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Euclid.Framework.Common\Euclid.Framework.Common.csproj">
+      <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
+      <Name>Euclid.Framework.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
