--- a/src/Euclid.Framework.Common.Packaging/Euclid.Framework.Common.Packaging.csproj
+++ b/src/Euclid.Framework.Common.Packaging/Euclid.Framework.Common.Packaging.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>fb0a7f1f-265c-4517-8e59-3132b1730eaa</ProjectGuid>
+    <ProjectGuid>{53F086A1-EC8E-40F8-BC87-2E5B3AA778D6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Euclid.Framework.Common.Packaging</RootNamespace>
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
