reorganization of service host & runtime fabric to common namespaces

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,4 +6,6 @@
   <repository path="..\tests\Euclid.Framework.HostingFabric.IntegrationTests\packages.config" />
   <repository path="..\tests\Euclid.Framework.IntegrationTests\packages.config" />
   <repository path="..\tests\Euclid.Framework.UnitTests\packages.config" />
+  <repository path="..\tests\Euclid.Common.IntegrationTests\packages.config" />
+  <repository path="..\tests\Euclid.Common.UnitTests\packages.config" />
 </repositories>
