--- a/src/Euclid.Common.Fabric/Euclid.Common.Fabric.csproj
+++ b/src/Euclid.Common.Fabric/Euclid.Common.Fabric.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{793DEE69-90CB-45D7-94CC-FD2D7CE59790}</ProjectGuid>
+    <ProjectGuid>{5DA8EB8A-1E6D-4286-88BD-6C58421049F0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Framework.TestingFakes</RootNamespace>
-    <AssemblyName>Euclid.Framework.TestingFakes</AssemblyName>
+    <RootNamespace>Euclid.Common.Fabric</RootNamespace>
+    <AssemblyName>Euclid.Common.Fabric</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,7 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultFabricController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Euclid.Common\Euclid.Common.csproj">
+      <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
+      <Name>Euclid.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
