--- a/src/Euclid.Common.RuntimeFabric/Euclid.Common.RuntimeFabric.csproj
+++ b/src/Euclid.Common.RuntimeFabric/Euclid.Common.RuntimeFabric.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{5DA8EB8A-1E6D-4286-88BD-6C58421049F0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Common.Fabric</RootNamespace>
-    <AssemblyName>Euclid.Common.Fabric</AssemblyName>
+    <RootNamespace>Euclid.Common.RuntimeFabric</RootNamespace>
+    <AssemblyName>Euclid.Common.RuntimeFabric</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
