--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -48,6 +48,9 @@
     <Compile Include="Hosting\IServiceHost.cs" />
     <Compile Include="Hosting\ServiceHostState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transport\IEnvelope.cs" />
+    <Compile Include="Transport\ITransport.cs" />
+    <Compile Include="Transport\TransportState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
