--- a/src/Euclid.Common.ServiceHost/Euclid.Common.ServiceHost.csproj
+++ b/src/Euclid.Common.ServiceHost/Euclid.Common.ServiceHost.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultHostedService.cs" />
-    <Compile Include="ServiceHosts\MultitaskingServiceHost.cs" />
+    <Compile Include="MultitaskingServiceHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -50,6 +50,7 @@
       <Name>Euclid.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
