--- a/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
+++ b/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
@@ -49,9 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Hosting\MultitaskingServiceHostTests.cs" />
+    <Compile Include="Hosting\MultitaskingServiceHostTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transport\TransportTest.cs" />
+    <Compile Include="Transport\TransportTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
