--- a/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
+++ b/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Hosting\MultitaskingServiceHostTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transport\InMemoryTransportTest.cs" />
     <Compile Include="Transport\TransportTest.cs" />
   </ItemGroup>
   <ItemGroup>
