--- a/src/Euclid.Common.Transport/Euclid.Common.Transport.csproj
+++ b/src/Euclid.Common.Transport/Euclid.Common.Transport.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InMemoryTransport.cs" />
+    <Compile Include="InMemoryMessageTransport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
