--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Fabric\FabricControllerState.cs" />
     <Compile Include="Fabric\IFabricController.cs" />
     <Compile Include="Hosting\HostedServiceNotFoundException.cs" />
@@ -47,12 +48,14 @@
     <Compile Include="Hosting\IHostedService.cs" />
     <Compile Include="Hosting\IServiceHost.cs" />
     <Compile Include="Hosting\ServiceHostState.cs" />
+    <Compile Include="Storage\IBlobStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transport\IEnvelope.cs" />
     <Compile Include="Transport\IMessageTransport.cs" />
     <Compile Include="Transport\ITypeTransport.cs" />
     <Compile Include="Transport\TransportState.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
