InMemoryTransport tests pass
Beginning AzureTransport
Beginning JsonSerialization

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -8,4 +8,6 @@
   <repository path="..\tests\Euclid.Framework.UnitTests\packages.config" />
   <repository path="..\tests\Euclid.Common.IntegrationTests\packages.config" />
   <repository path="..\tests\Euclid.Common.UnitTests\packages.config" />
+  <repository path="..\src\Euclid.Common.Transport\packages.config" />
+  <repository path="..\Euclid.Common.Serialization\packages.config" />
 </repositories>
