various organizational changes; work on service host

--- a/src/Euclid.Common.ServiceHost/Euclid.Common.ServiceHost.csproj
+++ b/src/Euclid.Common.ServiceHost/Euclid.Common.ServiceHost.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultFabricController.cs" />
     <Compile Include="DefaultHostedService.cs" />
     <Compile Include="MultitaskingServiceHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
