--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Serialization\ITypeSerializer.cs" />
     <Compile Include="Storage\IBlobStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transport\IEnvelope.cs" />
+    <Compile Include="Transport\IMessage.cs" />
     <Compile Include="Transport\IMessageTransport.cs" />
     <Compile Include="Transport\ITypeTransport.cs" />
     <Compile Include="Transport\TransportState.cs" />
