--- a/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
+++ b/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
@@ -55,7 +55,6 @@
   <ItemGroup>
     <Compile Include="Hosting\MultitaskingServiceHostTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\JsonMessageSerializer.cs" />
     <Compile Include="Serialization\TestJsonSerialization.cs" />
     <Compile Include="Transport\AzureTransportTest.cs" />
     <Compile Include="Transport\InMemoryTransportTests.cs" />
@@ -66,6 +65,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Euclid.Common.Serialization\Euclid.Common.Serialization.csproj">
+      <Project>{FEDCC429-C8F4-4D31-AC3B-4284C4E08B83}</Project>
+      <Name>Euclid.Common.Serialization</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Common.ServiceHost\Euclid.Common.ServiceHost.csproj">
       <Project>{4192538D-5E42-4841-8C8F-6A2072808D41}</Project>
       <Name>Euclid.Common.ServiceHost</Name>
