--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -52,7 +52,7 @@
     <Compile Include="ServiceHost\IHostedService.cs" />
     <Compile Include="ServiceHost\IServiceHost.cs" />
     <Compile Include="ServiceHost\ServiceHostState.cs" />
-    <Compile Include="Serialization\ITypeSerializer.cs" />
+    <Compile Include="Serialization\IMessageSerializer.cs" />
     <Compile Include="Storage\IBlobStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transport\IMessage.cs" />
