reformat; hacked a fix to a crazy bug in the envelope converter that depended on the alphabetical order of the envelope's properties

--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\StreamExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="ServiceHost\FabricControllerState.cs" />
     <Compile Include="ServiceHost\IFabricController.cs" />
     <Compile Include="ServiceHost\HostedServiceNotFoundException.cs" />
