--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Registry\IRegistry.cs" />
     <Compile Include="ServiceHost\FabricControllerState.cs" />
     <Compile Include="ServiceHost\IFabricController.cs" />
     <Compile Include="ServiceHost\HostedServiceNotFoundException.cs" />
