--- a/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
+++ b/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Registry\RegistryTests.cs" />
     <Compile Include="ServiceHost\MultitaskingServiceHostTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\TestJsonSerialization.cs" />
@@ -65,6 +66,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Euclid.Common.Registry\Euclid.Common.Registry.csproj">
+      <Project>{F0C8929B-718E-4360-85FF-520398DEA764}</Project>
+      <Name>Euclid.Common.Registry</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Common.Serialization\Euclid.Common.Serialization.csproj">
       <Project>{FEDCC429-C8F4-4D31-AC3B-4284C4E08B83}</Project>
       <Name>Euclid.Common.Serialization</Name>
